<resources>
    <string name="app_name">DND SHEET</string>
    <string name="characters">Персонажи</string>
    <string name="done">Готово</string>
    <string name="d">Готово</string>
    <string name="delete">Удалить</string>
    <string name="download">Открыть</string>
    <string name="upload">Загрузить</string>
    <string name="sleh">⠀/</string>
    <string name="damage">Урон</string>
    <string name="treatment">Лечение</string>
    <string name="name">Имя персонажа</string>
    <string name="class_">Класс</string>
    <string name="level">Уровень</string>
    <string name="armor">Класс доспеха</string>
    <string name="initiative">Инициатива</string>
    <string name="speed">Скорость</string>
    <string name="hp">Хиты</string>
    <string name="temp_hp">Временные хиты</string>
    <string name="hp_dice">Кости хитов</string>
    <string name="characteristics_n_skills">Характеристики и навыки</string>
    <string name="strength">Сила</string>
    <string name="dexterity">Ловкость</string>
    <string name="consit">Телосложение</string>
    <string name="intell">Интеллект</string>
    <string name="wisdom">Мудрость</string>
    <string name="charisma">Харизма</string>
    <string name="saving_throw">Спасбросок</string>
    <string name="acrobatics">Акробатика</string>
    <string name="animal_handing">Уход за животными</string>
    <string name="arcana">Магия</string>
    <string name="athletics">Атлетика</string>
    <string name="deception">Обман</string>
    <string name="history">История</string>
    <string name="insight">Проницательность</string>
    <string name="intimidation">Запугивание</string>
    <string name="investigation">Анализ</string>
    <string name="medicine">Медицина</string>
    <string name="nature">Природа</string>
    <string name="perception">Внимательность</string>
    <string name="performance">Выступление</string>
    <string name="persuasion">Убеждение</string>
    <string name="religion">Религия</string>
    <string name="sleight_of_hand">Ловкость рук</string>
    <string name="stealth">Скрытность</string>
    <string name="survival">Выживание</string>
    <string name="k20">K20</string>
    <string name="k12">K12</string>
    <string name="k10">K10</string>
    <string name="k8">K8</string>
    <string name="k6">K6</string>
    <string name="k4">K4</string>
    <string name="inventory">Снаряжение</string>
    <string name="prof">Владения</string>
    <string name="features">Умения</string>
    <string name="enter_text">Enter text</string>
    <string name="dice_room">dice room</string>
    <string name="dnd5_club">dnd5.club</string>
    <string name="generate_name">Generate names</string>
    <string name="notes">notes</string>
    <string name="dice">Dice</string>
    <string name="dnd_su">dnd.su</string>
    <string name="connect_btn">Connect</string>
    <string name="ip">IP</string>
</resources>