<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="278dp"
        android:layout_height="207dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="8dp">

            <Button
                android:id="@+id/k20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="32dp"
                android:hint="@string/k20"
                android:insetLeft="8dp"
                android:insetRight="20dp" />

            <Button
                android:id="@+id/k12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/k12"
                android:insetLeft="8dp"
                android:insetRight="20dp" />

            <Button
                android:id="@+id/k10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/k10"
                android:insetLeft="8dp"
                android:insetRight="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="281dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/k8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="32dp"
                android:hint="@string/k8"
                android:insetLeft="8dp"
                android:insetRight="20dp" />

            <Button
                android:id="@+id/k6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/k6"
                android:insetLeft="8dp"
                android:insetRight="20dp" />

            <Button
                android:id="@+id/k4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/k4"
                android:insetLeft="8dp"
                android:insetRight="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>
</RelativeLayout>