<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasterActivity">

    <Button
        android:id="@+id/dnd_club_bth"
        android:layout_width="189dp"
        android:layout_height="90dp"
        android:text="@string/dnd5_club"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/notes"
        android:layout_width="112dp"
        android:layout_height="80dp"
        android:text="@string/notes"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="376dp"
        android:layout_height="71dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/generate_name"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="376dp"
        android:layout_height="384dp"
        android:layout_marginBottom="220dp"
        android:layout_weight="1"
        android:backgroundTintMode="src_over"
        android:foregroundGravity="fill_horizontal"
        android:singleLine="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dnd_su_bth"
        android:layout_width="177dp"
        android:layout_height="88dp"
        android:text="@string/dnd_su"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/dice"
        android:layout_width="102dp"
        android:layout_height="80dp"
        android:layout_marginTop="485dp"
        android:text="@string/dice"
        android:textSize="15sp"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/diceRoomBtn"
        android:layout_width="130dp"
        android:layout_height="81dp"
        android:layout_marginBottom="32dp"
        android:text="@string/dice_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toEndOf="@+id/notes" />

</androidx.constraintlayout.widget.ConstraintLayout>