<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="490dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/newHp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="viewEnd"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sleh"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/oldHp"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ansED"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="30sp" />

            <Button
                android:id="@+id/removeBth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="С" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="100dp"
                android:insetRight="100dp"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTreatment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="@string/treatment" />

            <Button
                android:id="@+id/buttonDamage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="20dp"
                android:insetRight="20dp"
                android:text="@string/damage" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>